--- a/index.html
+++ b/index.html
@@ -103,24 +103,24 @@
           </p>
           <ul class="lislist-group p-0 mx-1 row gy-3">
             <li class="list-group-item col-sm-12">
-              <img src="./assets/images/checkicon.svg" alt="" /> Sewa Mobil
-              Dengan Supir di Bali 12 Jam
+              <img src="./assets/images/checkicon.svg" alt="checkicon" />
+              Sewa Mobil Dengan Supir di Bali 12 Jam
             </li>
             <li class="list-group-item col-sm-12">
-              <img src="./assets/images/checkicon.svg" alt="" /> Sewa Mobil
-              Lepas Kunci di Bali 24 Jam
+              <img src="./assets/images/checkicon.svg" alt="checkicon" />
+              Sewa Mobil Lepas Kunci di Bali 24 Jam
             </li>
             <li class="list-group-item col-sm-12">
-              <img src="./assets/images/checkicon.svg" alt="" /> Sewa Mobil
-              Jangka Panjang Bulanan
+              <img src="./assets/images/checkicon.svg" alt="checkicon" />
+              Sewa Mobil Jangka Panjang Bulanan
             </li>
             <li class="list-group-item col-sm-12">
-              <img src="./assets/images/checkicon.svg" alt="" /> Gratis Antar -
-              Jemput Mobil di Bandara
+              <img src="./assets/images/checkicon.svg" alt="checkicon" />
+              Gratis Antar - Jemput Mobil di Bandara
             </li>
             <li class="list-group-item col-sm-12">
-              <img src="./assets/images/checkicon.svg" alt="" /> Layanan Airport
-              Transfer / Drop In Out
+              <img src="./assets/images/checkicon.svg" alt="checkicon" />
+              Layanan Airport Transfer / Drop In Out
             </li>
           </ul>
         </div>
@@ -130,41 +130,41 @@
           <h2>Why Us?</h2>
           <p>Mengapa harus pilih Binar Car Rental?</p>
         </div>
-        <div>
-          <div class="card" style="width: 18rem">
+        <div class="row gap-1">
+          <div class="card col-lg-3 col-md-6 col-sm-12">
             <div class="card-body">
               <img src="./assets/images/thumb.svg" alt="Thumbs up logo" />
-              <h5 class="card-title">Mobil Lengkap</h5>
+              <h5 class="card-title my-3">Mobil Lengkap</h5>
               <p class="card-text">
                 Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan
                 terawat
               </p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
+          <div class="card col-lg-3 col-md-6 col-sm-12">
             <div class="card-body">
               <img src="./assets/images/pricetag.svg" alt="Thumbs up logo" />
-              <h5 class="card-title">Harga Murah</h5>
+              <h5 class="card-title my-3">Harga Murah</h5>
               <p class="card-text">
                 Harga murah dan bersaing, bisa dibandingkan harga kami dengan
                 rental mobil lain
               </p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
+          <div class="card col-lg-3 col-md-6 col-sm-12">
             <div class="card-body">
               <img src="./assets/images/clock.svg" alt="Thumbs up logo" />
-              <h5 class="card-title">Layanan 24 Jam</h5>
+              <h5 class="card-title my-3">Layanan 24 Jam</h5>
               <p class="card-text">
                 Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga
                 tersedia di akhir minggu
               </p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
+          <div class="card col-lg-3 col-md-6 col-sm-12">
             <div class="card-body">
               <img src="./assets/images/badge.svg" alt="Thumbs up logo" />
-              <h5 class="card-title">Sopir Profesional</h5>
+              <h5 class="card-title my-3">Sopir Profesional</h5>
               <p class="card-text">
                 Sopir yang professional, berpengalaman, jujur, ramah dan selalu
                 tepat waktu
