--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
           <h2>Why Us?</h2>
           <p>Mengapa harus pilih Binar Car Rental?</p>
         </div>
-        <div class="row gap-1">
-          <div class="card col-lg-3 col-md-6 col-sm-12">
+        <div class="row justify-content-center">
+          <div
+            class="card col-lg-3 col-md-6 col-sm-12"
+            style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
+          >
             <div class="card-body">
               <img src="./assets/images/thumb.svg" alt="Thumbs up logo" />
               <h5 class="card-title my-3">Mobil Lengkap</h5>
@@ -141,7 +144,10 @@
               </p>
             </div>
           </div>
-          <div class="card col-lg-3 col-md-6 col-sm-12">
+          <div
+            class="card col-lg-3 col-md-6 col-sm-12"
+            style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
+          >
             <div class="card-body">
               <img src="./assets/images/pricetag.svg" alt="Thumbs up logo" />
               <h5 class="card-title my-3">Harga Murah</h5>
@@ -151,7 +157,10 @@
               </p>
             </div>
           </div>
-          <div class="card col-lg-3 col-md-6 col-sm-12">
+          <div
+            class="card col-lg-3 col-md-6 col-sm-12"
+            style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
+          >
             <div class="card-body">
               <img src="./assets/images/clock.svg" alt="Thumbs up logo" />
               <h5 class="card-title my-3">Layanan 24 Jam</h5>
@@ -161,7 +170,10 @@
               </p>
             </div>
           </div>
-          <div class="card col-lg-3 col-md-6 col-sm-12">
+          <div
+            class="card col-lg-3 col-md-6 col-sm-12"
+            style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
+          >
             <div class="card-body">
               <img src="./assets/images/badge.svg" alt="Thumbs up logo" />
               <h5 class="card-title my-3">Sopir Profesional</h5>
@@ -184,29 +196,62 @@
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <p>hello1</p>
-              <img
-                src="https://placekitten.com/150/150"
-                class="d-block w-100 img-fluid rounded"
-                alt="https://placekitten.com/150/150"
-              />
+            <div class="carousel-item active bg-info p-4 rounded">
+              <div class="row">
+                <div class="col">
+                  <img
+                    src="https://placekitten.com/150/150"
+                    class="img-thumbnail rounded"
+                    alt="https://placekitten.com/150/150"
+                  />
+                </div>
+                <div class="col">
+                  <p>hello1</p>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                  </p>
+                  <h6>John Dee 32, Bromo</h6>
+                </div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <p>hello2</p>
-              <img
-                src="https://placekitten.com/150/150"
-                class="d-block w-100 img-fluid rounded"
-                alt="https://placekitten.com/150/150"
-              />
+            <div class="carousel-item bg-info p-4 rounded">
+              <div class="row">
+                <div class="col">
+                  <img
+                    src="https://placekitten.com/150/150"
+                    class="img-thumbnail rounded"
+                    alt="https://placekitten.com/150/150"
+                  />
+                </div>
+                <div class="col">
+                  <p>hello1</p>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                  </p>
+                  <h6>John Dee 32, Bromo</h6>
+                </div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <p>hello3</p>
-              <img
-                src="https://placekitten.com/150/150"
-                class="d-block w-100 img-fluid rounded"
-                alt="https://placekitten.com/150/150"
-              />
+            <div class="carousel-item bg-info p-4 rounded">
+              <div class="row">
+                <div class="col">
+                  <img
+                    src="https://placekitten.com/150/150"
+                    class="img-thumbnail rounded"
+                    alt="https://placekitten.com/150/150"
+                  />
+                </div>
+                <div class="col">
+                  <p>hello1</p>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                  </p>
+                  <h6>John Dee 32, Bromo</h6>
+                </div>
+              </div>
             </div>
           </div>
           <button
