wip: carousel layouting

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
       <nav class="navbar bg-gray">
         <div class="container">
           <a
-            class="navbar-brand bg-primary text-white p-2 rounded fw-bold"
+            class="navbar-brand bg-primary text-white p-1 rounded fw-bold"
             href="#"
             >Binar Car Rental</a
           >
           <div class="d-lg-flex gap-3 d-none">
-            <a class="nav-link" href="#">Binar Car</a>
-            <a class="nav-link" href="#">Binar Car</a>
-            <a class="nav-link" href="#">Binar Car</a>
-            <a class="nav-link" href="#">Binar Car</a>
+            <a class="nav-link" href="#our-services">Our Services</a>
+            <a class="nav-link" href="#why-us">Why Us</a>
+            <a class="nav-link" href="#testimonial">Testimonial</a>
+            <a class="nav-link" href="#faq">FAQ</a>
+            <a class="nav-link btn btn-success text-white px-2" href="#"
+              >Register
+            </a>
           </div>
           <button
             class="navbar-toggler d-md-block d-lg-none"
@@ -260,14 +263,14 @@
               </div>
               <div class="carousel-item bg-info p-4 rounded">
                 <div class="row">
-                  <div class="col">
+                  <div class="col-xs-12 col-md-6">
                     <img
                       src="https://placekitten.com/150/150"
                       class="img-thumbnail rounded"
                       alt="https://placekitten.com/150/150"
                     />
                   </div>
-                  <div class="col">
+                  <div class="col-xs-12 col-md-6 text-xs-center text-md-start">
                     <p>hello1</p>
                     <p>
                       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -309,9 +312,10 @@
 
         <section class="text-center my-5 p-5 bg-primary rounded text-white">
           <h2>Sewa Mobil di Bali Sekarang</h2>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia,
-            explicabo!
+          <p class="mx-lg-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, nisi
+            animi. Velit atque id inventore animi repellat itaque aspernatur
+            amet.
           </p>
           <button class="btn btn-success fw-bold">Mulai Sewa Mobil</button>
         </section>
