--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       .bg-gray {
         background-color: #f1f3ff;
       }
+
+      .circle {
+        border-radius: 50%;
+      }
+
+      .custom-border {
+        border: 1px solid gray !important;
+        border-radius: 2px !important;
+      }
     </style>
   </head>
   <body>
@@ -21,7 +30,7 @@
       <nav class="navbar bg-gray">
         <div class="container">
           <a
-            class="navbar-brand bg-primary text-white p-1 rounded fw-bold"
+            class="navbar-brand bg-primary text-primary p-1 rounded fw-bold"
             href="#"
             >Binar Car Rental</a
           >
@@ -223,60 +232,75 @@
             data-bs-ride="carousel"
           >
             <div class="carousel-inner">
-              <div class="carousel-item active bg-info p-4 rounded">
-                <div class="row">
-                  <div class="col">
+              <div class="carousel-item active bg-gray p-4 rounded">
+                <div class="row d-flex justify-content-center py-5">
+                  <div class="col-xs-12 col-md-4 text-md-end text-center">
                     <img
                       src="https://placekitten.com/150/150"
-                      class="img-thumbnail rounded"
+                      class="img-thumbnail circle"
                       alt="https://placekitten.com/150/150"
                     />
                   </div>
-                  <div class="col">
-                    <p>hello1</p>
+                  <div class="col-xs-12 col-md-5 text-xs-center text-md-start">
+                    <div class="text-center text-md-start">
+                      <img
+                        class="text-center text-md-start my-3"
+                        src="./assets/images/stars.svg"
+                      />
+                    </div>
                     <p>
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                      "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur."
                     </p>
-                    <h6>John Dee 32, Bromo</h6>
+                    <h6>James 22, Semeru</h6>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item bg-info p-4 rounded">
-                <div class="row">
-                  <div class="col">
+              <div class="carousel-item bg-gray p-4 rounded">
+                <div class="row d-flex justify-content-center py-5">
+                  <div class="col-xs-12 col-md-4 text-md-end text-center">
                     <img
-                      src="https://placekitten.com/150/150"
-                      class="img-thumbnail rounded"
+                      src="https://placekitten.com/151/151"
+                      class="img-thumbnail circle"
                       alt="https://placekitten.com/150/150"
                     />
                   </div>
-                  <div class="col">
-                    <p>hello1</p>
+                  <div class="col-xs-12 col-md-5">
+                    <div class="text-center text-md-start">
+                      <img
+                        class="text-center text-md-start my-3"
+                        src="./assets/images/stars.svg"
+                      />
+                    </div>
                     <p>
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                      "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur."
                     </p>
-                    <h6>John Dee 32, Bromo</h6>
+                    <h6>James 28, Bromo</h6>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item bg-info p-4 rounded">
-                <div class="row">
-                  <div class="col-xs-12 col-md-6">
+              <div class="carousel-item bg-gray p-4 rounded">
+                <div class="row d-flex justify-content-center py-5">
+                  <div class="col-xs-12 col-md-4 text-md-end text-center">
                     <img
-                      src="https://placekitten.com/150/150"
-                      class="img-thumbnail rounded"
+                      src="https://placekitten.com/150/151"
+                      class="img-thumbnail circle"
                       alt="https://placekitten.com/150/150"
                     />
                   </div>
-                  <div class="col-xs-12 col-md-6 text-xs-center text-md-start">
-                    <p>hello1</p>
+                  <div class="col-xs-12 col-md-5">
+                    <div class="text-center text-md-start">
+                      <img
+                        class="text-center text-md-start my-3"
+                        src="./assets/images/stars.svg"
+                      />
+                    </div>
                     <p>
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur.
+                      "Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Obcaecati, sint? Lorem ipsum dolor sit amet consectetur."
                     </p>
-                    <h6>John Dee 32, Bromo</h6>
+                    <h6>Karren 25, Rinjani</h6>
                   </div>
                 </div>
               </div>
@@ -322,14 +346,18 @@
 
         <!-- FAQ Section -->
 
-        <section class="my-5">
-          <div class="text-center">
-            <h2>Frequently Asked Questions</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
+        <section class="my-5 row">
+          <div class="col-lg-6">
+            <div class="text-center">
+              <h2>Frequently Asked Questions</h2>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
           </div>
-          <div>
+          <div class="col-lg-6">
             <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
+              <div
+                class="accordion-item mb-5 border-bottom-0 border-end-0 border-start-0 border-top-0 custom-border"
+              >
                 <h2 class="accordion-header" id="headingOne">
                   <button
                     class="accordion-button"
@@ -361,7 +389,9 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div
+                class="accordion-item my-5 border-bottom-0 border-end-0 border-start-0 custom-border"
+              >
                 <h2 class="accordion-header" id="headingTwo">
                   <button
                     class="accordion-button collapsed"
@@ -393,7 +423,9 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div
+                class="accordion-item my-5 border-bottom-0 border-end-0 border-start-0 custom-border"
+              >
                 <h2 class="accordion-header" id="headingThree">
                   <button
                     class="accordion-button collapsed"
@@ -430,11 +462,74 @@
         </section>
       </div>
     </main>
-    <!-- <footer>
-      <p>Jalan</p>
-      <p>Our services</p>
-      <p>Logo</p>
-    </footer> -->
+
+    <footer class="text-center text-lg-start bg-light text-muted py-4">
+      <section>
+        <div class="container text-center text-md-start mt-5">
+          <div class="row mt-3">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <p>
+                Lapangan Murdjani, Loktabat Utara, Kec. Banjarbaru Utara, Kota
+                Banjar Baru, Kalimantan Selatan 70714
+              </p>
+              <p>binarcarrental@mail.com</p>
+              <p>089-1212-222-223</p>
+            </div>
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <p>
+                <a href="#!" class="text-reset">Our Services</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Why Us</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Testimonial</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">FAQ</a>
+              </p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <p>Connect with us</p>
+              <img
+                src="./assets/images/logo/facebook.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="Facebook Logo"
+              />
+              <img
+                src="./assets/images/logo/twitter.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="twitter Logo"
+              />
+              <img
+                src="./assets/images/logo/instagram.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="instagram Logo"
+              />
+              <img
+                src="./assets/images/logo/linkedin.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="linkedin Logo"
+              />
+              <img
+                src="./assets/images/logo/email.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="Email Logo"
+              />
+              <img
+                src="./assets/images/logo/email.svg"
+                class="mx-1 bg-primary p-2 my-1 rounded"
+                alt="Email Logo"
+              />
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <p>&copy; Copyright Binar 2022</p>
+              <span class="text-primary bg-primary">Binar Car Rental</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
