--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </p>
           <button class="btn btn-success">Mulai Sewa Mobil</button>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 text-center">
           <img
             src="./assets/images/img_car.svg"
             alt="Hero Mobil Image"
@@ -118,7 +118,7 @@
         <!-- Features Section -->
 
         <section class="row my-5" id="our-services">
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-center">
             <img
               src="./assets/images/img_service.svg"
               alt="Woman Illustration"
@@ -167,10 +167,7 @@
           </div>
           <div>
             <div class="row justify-content-center">
-              <div
-                class="card"
-                style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
-              >
+              <div class="card col-lg-3 col-md-6 m-lg-0 m-1">
                 <div class="card-body">
                   <img src="./assets/images/thumb.svg" alt="Thumbs up logo" />
                   <h5 class="card-title my-3">Mobil Lengkap</h5>
@@ -180,10 +177,7 @@
                   </p>
                 </div>
               </div>
-              <div
-                class="card"
-                style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
-              >
+              <div class="card col-lg-3 col-md-6 m-lg-0 m-1">
                 <div class="card-body">
                   <img
                     src="./assets/images/pricetag.svg"
@@ -196,10 +190,7 @@
                   </p>
                 </div>
               </div>
-              <div
-                class="card"
-                style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
-              >
+              <div class="card col-lg-3 col-md-6 m-lg-0 m-1">
                 <div class="card-body">
                   <img src="./assets/images/clock.svg" alt="Thumbs up logo" />
                   <h5 class="card-title my-3">Layanan 24 Jam</h5>
@@ -209,10 +200,7 @@
                   </p>
                 </div>
               </div>
-              <div
-                class="card"
-                style="max-width: 20em; margin-right: 4px; margin-bottom: 4px"
-              >
+              <div class="card col-lg-3 col-md-6 m-lg-0 m-1">
                 <div class="card-body">
                   <img src="./assets/images/badge.svg" alt="Thumbs up logo" />
                   <h5 class="card-title my-3">Sopir Profesional</h5>
