fix: styling onHover button color

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         background: #5cb85f;
       }
 
+      .btn-green:hover {
+        background: #459748;
+      }
+
       .bg-primary-dark-blue {
         background: #0d28a6;
       }
@@ -69,7 +73,7 @@
             <a class="nav-link" href="#why-us">Why Us</a>
             <a class="nav-link" href="#testimonial">Testimonial</a>
             <a class="nav-link" href="#faq">FAQ</a>
-            <a class="nav-link btn btn-green text-white px-2" href="#">
+            <a class="nav-link btn-green text-white px-2 rounded" href="#!">
               Register
             </a>
           </div>
@@ -112,7 +116,7 @@
                   <a class="nav-link" href="#faq">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <button class="btn btn-green">Register</button>
+                  <button class="btn btn-green text-white">Register</button>
                 </li>
               </ul>
             </div>
