feat: moved internal css to external css

--- a/index.html
+++ b/index.html
@@ -15,56 +15,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <style>
-      body {
-        font-family: Helvetica, sans-serif;
-      }
-
-      .bg-gray {
-        background-color: #f1f3ff;
-      }
-
-      .circle {
-        border-radius: 50%;
-      }
-
-      .custom-border {
-        border: 1px solid gray !important;
-        border-radius: 2px !important;
-      }
-
-      .bg-opacity {
-        background-color: rgba(241, 243, 255, 0.6);
-      }
-
-      .font-36 {
-        font-size: 36px;
-      }
-
-      .btn-green {
-        background: #5cb85f;
-      }
-
-      .btn-green:hover {
-        background: #459748;
-      }
-
-      .bg-primary-dark-blue {
-        background: #0d28a6;
-      }
-
-      .text-primary-dark-blue {
-        color: #0d28a6;
-      }
-
-      .custom-card-text {
-        font-size: 14px;
-      }
-
-      .circle.btn-green.btn {
-        margin: 1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <header class="sticky-top">
